--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link href="/assets/css/cv.css" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/css/main.css">
     <title>KONATE Abas</title>
 </head>
 
@@ -23,9 +23,8 @@
 
     </div>
     <div class="logoR">
-        <a href="./assets/images/CV Abas_Konate.pdf">
-            <img class="LCV" src="/assets/imglogo/icons8-cv-48.png"
-                alt="direction vers le cv sur la même page">
+        <a href="/assets/images/CV Abas_Konate.pdf">
+            <img class="LCV" src="/assets/imglogo/icons8-cv-48.png" alt="direction vers le cv sur la même page">
         </a>
 
         <a href="https://www.linkedin.com/in/abas-konat%C3%A9-2aa49a223/?originalSubdomain=fr" target="_blank">
@@ -54,7 +53,7 @@
 
         <div class="carre2">
             <a href="https://abasdass.github.io/E-liquideShop/" target="_blank">
-                <img class="projet2" src="./assets/images/eliquide capture.png" alt="Image de projet">
+                <img class="projet2" src="/assets/images/eliquide capture.png" alt="Image de projet">
             </a>
         </div>
 
@@ -201,10 +200,10 @@
                     <ol>
                         <li style="list-style-image: url(/assets/imglogo/icons8-html-5-28.png);"></li>
                         <li style="list-style-image: url(/assets/imglogo/icons8-css3-28.png);"></li>
-                        <li style="list-style-image: url(./assets/imglogo/icons8-bootstrap-28.png);"></li>
+                        <li style="list-style-image: url(/assets/imglogo/icons8-bootstrap-28.png);"></li>
                         <li style="list-style-image: url(/assets/imglogo/icons8-javascript-28.png);"></li>
-                        <li style="list-style-image: url(./assets/imglogo/icons8-php-28.png);"></li>
-                        <li style="list-style-image: url(./assets/imglogo/icons8-figma-28.png);"></li>
+                        <li style="list-style-image: url(/assets/imglogo/icons8-php-28.png);"></li>
+                        <li style="list-style-image: url(/assets/imglogo/icons8-figma-28.png);"></li>
                         <li style="list-style-image: url(/assets/imglogo/icons8-adobe-photoshop-28.png);">
                         </li>
                         <li style="list-style-image: url(/assets/imglogo/icons8-adobe-premiere-pro-28.png);">
@@ -226,18 +225,6 @@
                         <li>FL STUDIO</li>
                     </ol>
                 </div>
-                <!-- <h2>
-                    COMPÉTENCES
-                </h2> -->
-                <!-- <p>
-                    SPORT PROFESSIONNEL Basketball<br>
-                    OPEN BROADCASTER SOFTWARE<br>
-                    STREAMING VIDEO TWITCH - YOUTUBE<br>
-                    PHOTOSHOP<br>
-                    ADOBE PREMIERE PRO<br>
-                    PRO TOOLS<br>
-                    FL STUDIO<br>
-                </p> -->
 
                 <h2>
                     EXPÉRIENCES PROFESSIONNELLES
@@ -268,7 +255,7 @@
         </div>
 
     </nav>
-    <script src="/assets/cv.js"></script>
+    <script src="/assets/script.js"></script>
 </body>
 
 </html>
