--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <title>KONATE Abas</title>
 </head>
 
@@ -23,16 +23,16 @@
 
     </div>
     <div class="logoR">
-        <a href="/assets/images/CV Abas_Konate.pdf">
-            <img class="LCV" src="/assets/images/icons8-cv-48.png" alt="direction vers le cv sur la même page">
+        <a href="assets/images/CV Abas_Konate.pdf">
+            <img class="LCV" src="assets/images/icons8-cv-48.png" alt="direction vers le cv sur la même page">
         </a>
 
         <a href="https://www.linkedin.com/in/abas-konat%C3%A9-2aa49a223/?originalSubdomain=fr" target="_blank">
-            <img class="LLK" src="/assets/images/icons8-linkedin-entouré-48.png" alt="icon linkedin">
+            <img class="LLK" src="assets/images/icons8-linkedin-entouré-48.png" alt="icon linkedin">
         </a>
 
         <a href="https://github.com/AbasDass" target="_blank">
-            <img class="LG" src="/assets/images/icons8-github-48 (1).png" alt="icon github">
+            <img class="LG" src="assets/images/icons8-github-48 (1).png" alt="icon github">
         </a>
 
 
@@ -47,13 +47,13 @@
 
         <div class="carre1">
             <a href="https://abasdass.github.io/Projet-All-show-La-Manu/index.html" target="_blank">
-                <img class="projet1" src="/assets/images/ALLSHOWIMG2.png" alt="Image de projet">
+                <img class="projet1" src="assets/images/ALLSHOWIMG2.png" alt="Image de projet">
             </a>
         </div>
 
         <div class="carre2">
             <a href="https://abasdass.github.io/E-liquideShop/" target="_blank">
-                <img class="projet2" src="/assets/images/eliquide capture.png" alt="Image de projet">
+                <img class="projet2" src="assets/images/eliquide capture.png" alt="Image de projet">
             </a>
         </div>
 
@@ -90,7 +90,7 @@
         <div class="allId">
             <div class="groupeA">
                 <div class="topInfo">
-                    <img src="/assets/images/photocvabas.png" alt="Photo du de la personne du cv">
+                    <img src=assets/images/photocvabas.png" alt="Photo du de la personne du cv">
                     <p class="nomPrenom">
                         KONATE<br>Abas
                     </p>
@@ -198,17 +198,17 @@
                 </h2>
                 <div class="list">
                     <ol>
-                        <li style="list-style-image: url(/assets/images/icons8-html-5-28.png);"></li>
-                        <li style="list-style-image: url(/assets/images/icons8-css3-28.png);"></li>
-                        <li style="list-style-image: url(/assets/images/icons8-bootstrap-28.png);"></li>
-                        <li style="list-style-image: url(/assets/images/icons8-javascript-28.png);"></li>
-                        <li style="list-style-image: url(/assets/images/icons8-php-28.png);"></li>
-                        <li style="list-style-image: url(/assets/images/icons8-figma-28.png);"></li>
-                        <li style="list-style-image: url(/assets/images/icons8-adobe-photoshop-28.png);">
+                        <li style="list-style-image: url(assets/images/icons8-html-5-28.png);"></li>
+                        <li style="list-style-image: url(assets/images/icons8-css3-28.png);"></li>
+                        <li style="list-style-image: url(assets/images/icons8-bootstrap-28.png);"></li>
+                        <li style="list-style-image: url(assets/images/icons8-javascript-28.png);"></li>
+                        <li style="list-style-image: url(assets/images/icons8-php-28.png);"></li>
+                        <li style="list-style-image: url(assets/images/icons8-figma-28.png);"></li>
+                        <li style="list-style-image: url(assets/images/icons8-adobe-photoshop-28.png);">
                         </li>
-                        <li style="list-style-image: url(/assets/images/icons8-adobe-premiere-pro-28.png);">
+                        <li style="list-style-image: url(assets/images/icons8-adobe-premiere-pro-28.png);">
                         </li>
-                        <li style="list-style-image: url(/assets/images/icons8-fl-studio-28.png);"></li>
+                        <li style="list-style-image: url(assets/images/icons8-fl-studio-28.png);"></li>
                     </ol>
                 </div>
 
@@ -255,7 +255,7 @@
         </div>
 
     </nav>
-    <script src="/assets/script.js"></script>
+    <script src="assets/script.js"></script>
 </body>
 
 </html>
