--- a/index.html
+++ b/index.html
@@ -83,14 +83,11 @@
         </div>
     </section>
 
-
-
-
     <nav>
         <div class="allId">
             <div class="groupeA">
                 <div class="topInfo">
-                    <img src=assets/images/photocvabas.png" alt="Photo du de la personne du cv">
+                    <img src="/assets/images/photocvabas.png" alt="Photo du de la personne du cv">
                     <p class="nomPrenom">
                         KONATE<br>Abas
                     </p>
