--- a/index.html
+++ b/index.html
@@ -14,203 +14,151 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat&family=Source+Sans+Pro&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat&family=Roboto:ital,wght@1,100&family=Source+Sans+Pro&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jost:wght@300&family=Montserrat&family=Roboto:ital,wght@1,100&family=Source+Sans+Pro&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jost:wght@100&family=Montserrat&family=Roboto:ital,wght@1,100&family=Source+Sans+Pro&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main.css">
     <title>KONATE Abas</title>
 </head>
 
 <body>
-    <div class="backT">
+    <header class="allLogo">
+            <div class="curriculum">
+                <a href="assets/images/CV Abas_Konate.pdf">
+                    <img class="LCV" src="assets/images/icons8-cv-48.png" alt="direction vers le cv sur la même page">
+                </a>
+            </div>
+            <div class="linkedin">
+                <a href="https://www.linkedin.com/in/abas-konat%C3%A9-2aa49a223/?originalSubdomain=fr" target="_blank">
+                    <img class="LLK" src="assets/images/icons8-linkedin-entouré-48.png" alt="icon linkedin">
+                </a>
+            </div>
+            <div class="github">
+                <a href="https://github.com/AbasDass" target="_blank">
+                    <img class="LG" src="assets/images/icons8-github-48 (1).png" alt="icon github">
+                </a>
+            </div>
+    </header>
 
-    </div>
-    <div class="logoR">
-        <a href="assets/images/CV Abas_Konate.pdf">
-            <img class="LCV" src="assets/images/icons8-cv-48.png" alt="direction vers le cv sur la même page">
-        </a>
+    <section class="presentation">
+        <div class="topInfo">
+            <img src="assets/images/photocvabas.png" alt="Photo du de la personne du cv">
+            <p class="nomPrenom">
+                KONATE<br>Abas
+            </p>
+            <p class="ageAbas">
+                25 ans
+            </p>
+            <p class="devWeb">
+                Développeur Web
+            </p>
+            <p class="mail">
+                <a href="mailto:konate.abas@hotmail.fr">konate.abas@hotmail.fr</a>
+            </p>
+        </div>
+    </section>
 
-        <a href="https://www.linkedin.com/in/abas-konat%C3%A9-2aa49a223/?originalSubdomain=fr" target="_blank">
-            <img class="LLK" src="assets/images/icons8-linkedin-entouré-48.png" alt="icon linkedin">
-        </a>
-
-        <a href="https://github.com/AbasDass" target="_blank">
-            <img class="LG" src="assets/images/icons8-github-48 (1).png" alt="icon github">
-        </a>
-
-
-    </div>
-
-    <p class="textProjet">
-        PROJET AU COUR<br> DE LA FORMATION <span id="redim"
-            style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">VITRINE</span>
-    </p>
-
+    <!-- SECTION MID PAGE -->
     <section class="container">
-
-        <div class="carre1">
-            <a href="https://abasdass.github.io/Projet-All-show-La-Manu/index.html" target="_blank">
-                <img class="projet1" src="assets/images/ALLSHOWIMG2.png" alt="Image de projet">
-            </a>
+        <div class="textIntro">
+            <p>
+                Reconversion<br>
+                Actuellement en formation à l'école du numérique La Manu<br>en développement web et application web
+                mobile<br>
+                le choix entre le Front End et le Back End m'est encore perplexe<br>je suis à la recherche d'une
+                entreprise pouvant m'accueillir pour approfondir mes<br>
+                compétences et expériences professionnelles.
+            </p>
+        </div>
+        <div class="textProjet">
+            <p>
+                PROJET AU COUR<br> DE LA FORMATION <span id="redim"
+                    style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">VITRINE</span>
+            </p>
         </div>
 
-        <div class="carre2">
-            <a href="https://abasdass.github.io/E-liquideShop/" target="_blank">
-                <img class="projet2" src="assets/images/eliquide capture.png" alt="Image de projet">
-            </a>
+        <div class="cardProject">
+            <div class="carre1">
+                <p class="textP">
+                    En réalisant cette maquette,<br> j'ai appris à utiliser le framework bootstrap<br>en se documentant
+                    sur la<br>documentation du framework
+                </p>
+                <a href="https://abasdass.github.io/Projet-All-show-La-Manu/index.html" target="_blank">
+                    <img class="projet1" src="assets/images/ALLSHOWIMG2.png" alt="Image de projet">
+                </a>
+            </div>
+
+            <div class="carre2">
+                <p class="textP2">
+                    Maquette réalisée en HTML et CSS<br>le but était de créer une vitrine<br>E-commerce de
+                    notre choix<br>cette intégration a été réalisée sans framework
+                </p>
+                <a href="https://abasdass.github.io/E-liquideShop/" target="_blank">
+                    <img class="projet2" src="assets/images/eliquide capture.png" alt="Image de projet">
+                </a>
+            </div>
         </div>
 
     </section>
 
-    <section class="container2">
-        <div class="textFront">
-            <h3 class="titreFront">Front End: </h3>
-            <div class="styleList">
-                <p>HTML</p>
-                <p>CSS</p>
-                <p>BOOTSTRAP</p>
-                <p>FIGMA</p>
-                <p>JAVASCRIPT</p>
-            </div>
+
+    <!-- PARTIE DE RECONVERTION ET EXPERIENCE -->
+    <div class="barreSuite">
+
+    </div> 
+    <div class="barreSuite2">
+
+    </div>
+    <section class="eP">
+        <div class="textcv">
+            <h2>
+                DIPLÔMES ET FORMATIONS
+            </h2>
+            <p class="textEp">
+                Ecole du numérique La Manu<br>développement web et web mobile<br>2022 - 2023<br>
+                <span>Campus de Compiègne</span><br>
+                <br>
+                Formation à l'afpa Back End (Symfony)<br>2022<br>
+                <span>Centre de l'Afpa de Beauvais</span><br>
+                <br>
+                Mention Complémentaire Traiteur<br>2017 - 2018<br>
+                <span>Lycée Charles De Gaulle Compiègne</span><br>
+                <br>
+                Bac Professionnel- Art Culinaire<br>2016 - 2017<br>
+                <span>Lycée Charles De Gaulle Compiègne</span>
+
+            </p>
         </div>
-
-        <div class="textBack">
-            <h3 class="titreBack">Back End: concept appris lors d'une formation</h3>
-            <div class="styleList">
-                <p>Merise</p>
-                <p>MySQL</p>
-                <p>SQL</p>
-                <p>PHP</p>
-                <p>SYMFONY</p>
-            </div>
-        </div>
-    </section>
-
-    <nav>
-        <div class="allId">
-            <div class="groupeA">
-                <div class="topInfo">
-                    <img src="assets/images/photocvabas.png" alt="Photo du de la personne du cv">
-                    <p class="nomPrenom">
-                        KONATE<br>Abas
-                    </p>
-                    <p class="devWeb">
-                        Développeur Web
-                    </p>
-                </div>
-
-                <div class="barreG"></div>
-                <p class="propos">À PROPOS</p>
-                <div class="barreD"></div>
-
-                <div class="info">
-                    <p>
-                        <span class="material-symbols-outlined">
-                            mail
-                        </span>
-                        <a href="mailto:konate.abas@hotmail.fr">konate.abas@hotmail.fr</a>
-                    </p>
-                    <p>
-                        <span class="material-symbols-outlined">
-                            cake
-                        </span>
-                        16/05/1997
-                    </p>
-                    <p>
-                        <span class="material-symbols-outlined">
-                            flag
-                        </span>
-                        FRANCE
-                    </p>
-                    <p>
-                        <span class="material-symbols-outlined">
-                            badge
-                        </span>
-                        Permis B
-                    </p>
-                </div>
-                <div class="barreG"></div>
-                <p class="langue">LANGUES</p>
-                <div class="barreD"></div>
-
-                <div class="english">
-                    <p>Anglais</p>
-                </div>
-
-                <div class="barreG"></div>
-                <p class="atouts">ATOUTS</p>
-                <div class="barreD"></div>
-
-                <div class="adaptabilite">
-                    <p>Adaptabilité</p>
-                    <div></div>
-                    <p>Persévérance</p>
-                    <div></div>
-                    <p>Curiosité</p>
-                    <div></div>
-                </div>
-
-                <div class="barreG2"></div>
-                <p class="centreInterer">LOISIR</p>
-                <div class="barreD2"></div>
-
-                <div class="centre">
-
-                    <p>Basket Pré-Nationale</p>
-
-                    <p>Beatmaking</p>
-
-                    <p>Jeux Video</p>
-                </div>
-            </div>
-
-            <!-- PARTIE DE RECONVERTION ET EXPERIENCE -->
-            <div class="textcv">
-                <p class="textintro">
-                    Reconversion<br>
-                    Actuellement en formation à l'école du numérique La Manu en développement web et application web
-                    mobile<br>
-                    le choix entre le Front End et le Back End met encore perplex, je suis à la recherche d'une<br>
-                    entreprise pouvant m'accueillir pour approfondir mes<br>
-                    compétences et expérience professionnelles
-                </p>
-
-                <h2>
-                    DIPLÔMES ET FORMATIONS
-                </h2>
-                <p>
-                    Ecole du numérique La Manu développement Web et web mobile 2022 à 2023<br>
-                    <span>Campus de Compiègne</span><br>
-                    <br>
-                    Formation à l'afpa Back End (Symfony) 2022<br>
-                    <span>Centre de l'Afpa de Beauvais</span><br>
-                    <br>
-                    Mention Complémentaire Traiteur De 2017 à 2018<br>
-                    <span>Lycée Charles De Gaulle Compiègne</span><br>
-                    <br>
-                    Bac Professionnel- Art Culinaire De 2016 à 2017<br>
-                    <span>Lycée Charles De Gaulle Compiègne</span>
-
-                </p>
-
-                <h2>
-                    INFORMATIQUE
-                </h2>
-                <div class="list">
-                    <ol>
+        <div class="informatique">
+            <h2>
+                INFORMATIQUE
+            </h2>
+            <div class="bigDiv">
+                <div class="bigIcon">
+                    <ol class="logoInfo">
                         <li style="list-style-image: url(assets/images/icons8-html-5-28.png);"></li>
                         <li style="list-style-image: url(assets/images/icons8-css3-28.png);"></li>
                         <li style="list-style-image: url(assets/images/icons8-bootstrap-28.png);"></li>
                         <li style="list-style-image: url(assets/images/icons8-javascript-28.png);"></li>
                         <li style="list-style-image: url(assets/images/icons8-php-28.png);"></li>
                         <li style="list-style-image: url(assets/images/icons8-figma-28.png);"></li>
-                        <li style="list-style-image: url(assets/images/icons8-adobe-photoshop-28.png);">
-                        </li>
-                        <li style="list-style-image: url(assets/images/icons8-adobe-premiere-pro-28.png);">
-                        </li>
+                        <li style="list-style-image: url(assets/images/icons8-adobe-photoshop-28.png);"></li>
+                        <li style="list-style-image: url(assets/images/icons8-adobe-premiere-pro-28.png);"></li>
                         <li style="list-style-image: url(assets/images/icons8-fl-studio-28.png);"></li>
                     </ol>
                 </div>
 
-                <div class="listText">
-                    <ol>
+                <div class="listInformatique">
+                    <ol class="logoMots">
                         <li>HTML</li>
                         <li>CSS</li>
                         <li>BOOTSTRAP</li>
@@ -222,37 +170,57 @@
                         <li>FL STUDIO</li>
                     </ol>
                 </div>
-
-                <h2>
-                    EXPÉRIENCES PROFESSIONNELLES
-                </h2>
-                <p>
-                    Assistant d'éducation De 2020 à 2021<br>
-                    Collège François Villon Cambrai, France<br>
-                    - Chargé de la bonne pédagogie des élèves<br>
-                    <br>
-                    Intervenant Sportive De 2019 à 2020<br>
-                    écoles de la commune de Margny-Lès-Compiègne Margny-Lès-Compiègne<br>
-                    <br>
-                    Stage en Art Culinaire De 2018 à 2019<br>
-                    La Boule d'Or Thourotte, France<br>
-                    Gérer une équipe et élaborer la mise en place du service de restauration<br>
-                    <br>
-                    Commis Art Culinaire De 2017 à 2018<br>
-                    Scapin Margny-lès-Compiègne, France<br>
-                    <br>
-                    Commis Art Culinaire De 2016 à 2017<br>
-                    Patrimoine et terroir Compiègne<br>
-                    Mise en place du service de restauration<br>
-                </p>
-            </div>
-            <div class="barreV">
-
             </div>
         </div>
+        <div class=" expPro">
+            <h2>
+                EXPÉRIENCES PROFESSIONNELLES
+            </h2>
+            <p class="textEp">
+                Assistant d'éducation De 2020 à 2021<br>
+                Collège François Villon Cambrai, France<br>
+                - Chargé de la bonne pédagogie des élèves<br>
+                <br>
+                Intervenant Sportive De 2019 à 2020<br>
+                Ecoles de la commune<br>Margny-Lès-Compiègne<br>
+                <br>
+                Stage en Art Culinaire De 2018 à 2019<br>
+                La Boule d'Or Thourotte, France<br>
+                Gérer une équipe et élaborer<br>la mise en place du service de restauration<br>
+                <br>
+                Commis Art Culinaire De 2017 à 2018<br>
+                Scapin Margny-lès-Compiègne, France<br>
+                <br>
+                Commis Art Culinaire De 2016 à 2017<br>
+                Patrimoine et terroir Compiègne<br>
+                Mise en place du service de restauration<br>
+            </p>
+        </div>
+    </section>
+    <footer class="container2">
+            <div class="textFront">
+                <h3 class="titreSp">Front End</h3>
+                <div class="styleList">
+                    <p>HTML</p>
+                    <p>CSS</p>
+                    <p>BOOTSTRAP</p>
+                    <p>FIGMA</p>
+                    <p>JAVASCRIPT</p>
+                </div>
+            </div>
 
-    </nav>
-    <script src="assets/script.js"></script>
+            <div class="textBack">
+                <h3 class="titreSp">Back End</h3>
+                <div class="styleList">
+                    <p>Merise</p>
+                    <p>MySQL</p>
+                    <p>SQL</p>
+                    <p>PHP</p>
+                    <p>SYMFONY</p>
+                </div>
+            </div>
+    </footer>
+
 </body>
 
 </html>
