--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
     <header class="allLogo">
             <div class="curriculum">
-                <a href="assets/images/CV Abas_Konate.pdf">
+                <a href="assets/images/CV_2023-01-24_Abas_Konate.pdf" target="_blank">
                     <img class="LCV" src="assets/images/icons8-cv-48.png" alt="direction vers le cv sur la même page">
                 </a>
             </div>
@@ -71,9 +71,9 @@
     <section class="container">
         <div class="textIntro">
             <p>
-                Reconversion<br>
-                Actuellement en formation à l'école du numérique La Manu<br>en développement web et application web
-                mobile<br>
+                Reconversion:
+                 Actuellement en formation à l'école<br>du numérique La Manu<br>en développement web et application web
+                mobile
                 le choix entre le Front End et le Back End m'est encore perplexe<br>je suis à la recherche d'une
                 entreprise pouvant m'accueillir pour approfondir mes<br>
                 compétences et expériences professionnelles.
@@ -99,8 +99,8 @@
 
             <div class="carre2">
                 <p class="textP2">
-                    Maquette réalisée en HTML et CSS<br>le but était de créer une vitrine<br>E-commerce de
-                    notre choix<br>cette intégration a été réalisée sans framework
+                    Maquette réalisée<br>en HTML et CSS<br>le but était de créer une vitrine<br>E-commerce de
+                    notre choix<br>cette intégration a été réalisée<br>sans framework
                 </p>
                 <a href="https://abasdass.github.io/E-liquideShop/" target="_blank">
                     <img class="projet2" src="assets/images/eliquide capture.png" alt="Image de projet">
