--- a/index.html
+++ b/index.html
@@ -5,27 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">    
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, height=device-height"/>
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat&family=Source+Sans+Pro&display=swap"
-        rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat&family=Roboto:ital,wght@1,100&family=Source+Sans+Pro&display=swap"
-        rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jost:wght@300&family=Montserrat&family=Roboto:ital,wght@1,100&family=Source+Sans+Pro&display=swap"
-        rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jost:wght@100&family=Montserrat&family=Roboto:ital,wght@1,100&family=Source+Sans+Pro&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat&family=Source+Sans+Pro&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat&family=Roboto:ital,wght@1,100&family=Source+Sans+Pro&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jost:wght@300&family=Montserrat&family=Roboto:ital,wght@1,100&family=Source+Sans+Pro&display=swap"/> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jost:wght@100&family=Montserrat&family=Roboto:ital,wght@1,100&family=Source+Sans+Pro&display=swap"/>
+    <link rel="stylesheet" href="assets/css/main.css"/>
     <title>KONATE Abas</title>
 </head>
 
@@ -98,7 +86,7 @@
 
             <div class="carre2">
                 <p class="textP2">
-                    Maquette réalisée<br>en HTML et CSS<br>le but était de créer une vitrine<br>E-commerce de
+                    Maquette réalisée en HTML et CSS<br>le but était de créer une vitrine<br>E-commerce de
                     notre choix<br>cette intégration a été réalisée<br>sans framework
                 </p>
                 <a href="https://abasdass.github.io/E-liquideShop/" target="_blank">
