--- a/index.html
+++ b/index.html
@@ -1,56 +1,76 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">    
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat&family=Source+Sans+Pro&display=swap"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat&family=Roboto:ital,wght@1,100&family=Source+Sans+Pro&display=swap"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jost:wght@300&family=Montserrat&family=Roboto:ital,wght@1,100&family=Source+Sans+Pro&display=swap"/> 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jost:wght@100&family=Montserrat&family=Roboto:ital,wght@1,100&family=Source+Sans+Pro&display=swap"/>
-    <link rel="stylesheet" href="assets/css/main.css"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat&family=Source+Sans+Pro&display=swap" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat&family=Roboto:ital,wght@1,100&family=Source+Sans+Pro&display=swap" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jost:wght@300&family=Montserrat&family=Roboto:ital,wght@1,100&family=Source+Sans+Pro&display=swap" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jost:wght@100&family=Montserrat&family=Roboto:ital,wght@1,100&family=Source+Sans+Pro&display=swap" />
+    <link rel="stylesheet" href="assets/css/main.css" />
     <title>KONATE Abas</title>
 </head>
 
 <body>
     <header class="allLogo">
-            <div class="curriculum">
-                <a href="assets/images/CV_2023-01-24_Abas_Konate.pdf" target="_blank">
-                    <img class="LCV" src="assets/images/icons8-cv-48.png" alt="direction vers le cv sur la même page">
-                </a>
-            </div>
-            <div class="linkedin">
-                <a href="https://www.linkedin.com/in/abas-konat%C3%A9-2aa49a223/?originalSubdomain=fr" target="_blank">
-                    <img class="LLK" src="assets/images/icons8-linkedin-entouré-48.png" alt="icon linkedin">
-                </a>
-            </div>
-            <div class="github">
-                <a href="https://github.com/AbasDass" target="_blank">
-                    <img class="LG" src="assets/images/icons8-github-48 (1).png" alt="icon github">
-                </a>
-            </div>
+        <div class="curriculum">
+            <a href="assets/images/CV_2023-01-24_Abas_Konate.pdf" target="_blank">
+                <img class="LCV" src="assets/images/icons8-cv-48.png" alt="direction vers le cv sur la même page">
+            </a>
+        </div>
+        <div class="linkedin">
+            <a href="https://www.linkedin.com/in/abas-konat%C3%A9-2aa49a223/?originalSubdomain=fr" target="_blank">
+                <img class="LLK" src="assets/images/icons8-linkedin-entouré-48.png" alt="icon linkedin">
+            </a>
+        </div>
+        <div class="github">
+            <a href="https://github.com/AbasDass" target="_blank">
+                <img class="LG" src="assets/images/icons8-github-48 (1).png" alt="icon github">
+            </a>
+        </div>
     </header>
 
     <section class="presentation">
-        <div class="topInfo">
-            <img src="assets/images/photocvabas.png" alt="Photo du de la personne du cv">
-            <p class="nomPrenom">
-                KONATE<br>Abas
-            </p>
-            <p class="ageAbas">
-                25 ans
-            </p>
-            <p class="devWeb">
-                Développeur Web
-            </p>
-            <p class="mail">
-                <a href="mailto:konate.abas@hotmail.fr">konate.abas@hotmail.fr</a>
-            </p>
-        </div>
+            <div class="imgAbas">
+                <img src="assets/images/photocvabas.png" alt="Photo du de la personne du cv">
+            </div>
+
+            <div class="nomPrenom">
+                <p class="nomPrenom">
+                    KONATE<br>Abas
+                </p>
+            </div>
+
+            <div class="ageAbas">
+                <p class="ageAbas">
+                    25 ans
+                </p>
+            </div>
+            <div class="devWeb">
+                <p class="devWeb">
+                    Développeur Web
+                </p>
+            </div>
+            <div class="mail">
+                <p class="mail">
+                    <a href="mailto:konate.abas@hotmail.fr">konate.abas@hotmail.fr</a>
+                </p>
+            </div>
+        
     </section>
 
     <!-- SECTION MID PAGE -->
@@ -58,7 +78,7 @@
         <div class="textIntro">
             <p>
                 Reconversion:
-                 Actuellement en formation à l'école<br>du numérique La Manu<br>en développement web et application web
+                Actuellement en formation à l'école<br>du numérique La Manu<br>en développement web et application web
                 mobile
                 le choix entre le Front End et le Back End m'est encore perplexe<br>je suis à la recherche d'une
                 entreprise pouvant m'accueillir pour approfondir mes<br>
@@ -86,7 +106,7 @@
             <div class="carre2">
                 <p class="textP2">
                     Maquette réalisée en HTML et CSS<br>le but était de créer une vitrine<br>E-commerce de
-                    notre choix<br>cette intégration a été réalisée<br>sans framework
+                    notre choix<br>sans framework
                 </p>
                 <a href="https://abasdass.github.io/E-liquideShop/" target="_blank">
                     <img class="projet2" src="assets/images/eliquide capture.png" alt="Image de projet">
@@ -100,7 +120,7 @@
     <!-- PARTIE DE RECONVERTION ET EXPERIENCE -->
     <div class="barreSuite">
 
-    </div> 
+    </div>
     <div class="barreSuite2">
 
     </div>
@@ -184,27 +204,27 @@
         </div>
     </section>
     <footer class="container2">
-            <div class="textFront">
-                <h3 class="titreSp">Front End</h3>
-                <div class="styleList">
-                    <p>HTML</p>
-                    <p>CSS</p>
-                    <p>BOOTSTRAP</p>
-                    <p>FIGMA</p>
-                    <p>JAVASCRIPT</p>
-                </div>
+        <div class="textFront">
+            <h3 class="titreSp">Front End</h3>
+            <div class="styleList">
+                <p>HTML</p>
+                <p>CSS</p>
+                <p>BOOTSTRAP</p>
+                <p>FIGMA</p>
+                <p>JAVASCRIPT</p>
             </div>
+        </div>
 
-            <div class="textBack">
-                <h3 class="titreSp">Back End</h3>
-                <div class="styleList">
-                    <p>Merise</p>
-                    <p>MySQL</p>
-                    <p>SQL</p>
-                    <p>PHP</p>
-                    <p>SYMFONY</p>
-                </div>
+        <div class="textBack">
+            <h3 class="titreSp">Back End</h3>
+            <div class="styleList">
+                <p>Merise</p>
+                <p>MySQL</p>
+                <p>SQL</p>
+                <p>PHP</p>
+                <p>SYMFONY</p>
             </div>
+        </div>
     </footer>
 
 </body>
