--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
         </div>
         <div class="textProjet">
             <p>
-                PROJET AU COURS<br> DE LA FORMATION <span id="redim"
-                    style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">VITRINE</span>
+                PROJET AU COURS<br> DE LA FORMATION <span id="redim">VITRINE</span>
             </p>
         </div>
 
