--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="cardProject">
             <div class="carre1">
                 <p class="textP">
-                    En réalisant cette maquette,<br> j'ai appris à utiliser le framework bootstrap<br>en se documentant
+                    En réalisant cette maquette,<br> j'ai appris à utiliser le framework bootstrap en se documentant
                     sur la<br>documentation du framework
                 </p>
                 <a href="https://abasdass.github.io/Projet-All-show-La-Manu/index.html" target="_blank">
