--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="devWeb">
                 <p class="devWeb">
-                    Développeur Web
+                    Développeur Web<br>Full Stack
                 </p>
             </div>
             <div class="mail">
@@ -93,8 +93,8 @@
         <div class="cardProject">
             <div class="carre1">
                 <p class="textP">
-                    En réalisant cette maquette,<br> j'ai appris à utiliser le framework bootstrap en se documentant
-                    sur la<br>documentation du framework
+                    En réalisant cette maquette<br>j'ai appris à utiliser le framework<br>bootstrap en m'aidant de la documentation
+                    <br>du framework
                 </p>
                 <a href="https://abasdass.github.io/Projet-All-show-La-Manu/index.html" target="_blank">
                     <img class="projet1" src="assets/images/ALLSHOWIMG2.png" alt="Image de projet">
