--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
@@ -22,13 +23,14 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jost:wght@100&family=Montserrat&family=Roboto:ital,wght@1,100&family=Source+Sans+Pro&display=swap" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <script src="assets/scriptPortfolio.js" defer></script>
     <title>KONATE Abas</title>
 </head>
 
 <body>
     <header class="allLogo">
         <div class="curriculum">
-            <a href="assets/images/CV_2023-01-24_Abas_Konate.pdf" target="_blank">
+            <a href="assets/images/CV AbasDevFullStack.pdf" target="_blank">
                 <img class="LCV" src="assets/images/icons8-cv-48.png" alt="direction vers le cv sur la même page">
             </a>
         </div>
@@ -76,12 +78,16 @@
     <section class="container">
         <div class="textIntro">
             <p>
-                Reconversion:
+                <!-- Reconversion:
                 Actuellement en formation à l'école<br>du numérique La Manu<br>en développement web et application web
                 mobile
                 le choix entre le Front End et le Back End m'est encore perplexe<br>je suis à la recherche d'une
                 entreprise pouvant m'accueillir pour approfondir mes<br>
-                compétences et expériences professionnelles.
+                compétences et expériences professionnelles. -->
+
+                Reconversion<br>
+                Actuellement en formation à l'école<br>du numérique La Manu<br>en développement web et application web mobile
+                Je suis donc à la recherche d'une entreprise pour monter en compétence et en expérience professionnelle durant une alternance, quel qu'en soit la spécialisation le choix entre le Front End et le Back End m'est encore difficile
             </p>
         </div>
         <div class="textProjet">
@@ -226,5 +232,4 @@
     </footer>
 
 </body>
-
 </html>
