--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <header class="allLogo">
         <div class="curriculum">
-            <a href="assets/images/CV AbasDevFullStack.pdf" target="_blank">
+            <a href="assets/images/CVAbas_Konate.pdf" target="_blank">
                 <img class="LCV" src="assets/images/icons8-cv-48.png" alt="direction vers le cv sur la même page">
             </a>
         </div>
@@ -85,9 +85,8 @@
                 entreprise pouvant m'accueillir pour approfondir mes<br>
                 compétences et expériences professionnelles. -->
 
-                Reconversion<br>
-                Actuellement en formation à l'école<br>du numérique La Manu<br>en développement web et application web mobile
-                Je suis donc à la recherche d'une entreprise pour monter en compétence et en expérience professionnelle durant une alternance, quel qu'en soit la spécialisation le choix entre le Front End et le Back End m'est encore difficile
+                Actuellement en formation diplômante à l'école du numérique<br>La Manu en développement web et application web mobile
+                Je suis donc à la recherche d'une entreprise pouvant m'accueillir afin de monter en compétence et acquérir de l'expérience professionnelle.
             </p>
         </div>
         <div class="textProjet">
