--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet"
@@ -101,9 +101,9 @@
                     En réalisant cette maquette<br>j'ai appris à utiliser le framework<br>bootstrap en m'aidant de la documentation
                     <br>du framework
                 </p>
-                <a href="https://abasdass.github.io/Projet-All-show-La-Manu/index.html" target="_blank">
+                <!-- <a href="https://abasdass.github.io/Projet-All-show-La-Manu/index.html" target="_blank"> -->
                     <img class="projet1" src="assets/images/ALLSHOWIMG2.png" alt="Image de projet">
-                </a>
+                <!-- </a> -->
             </div>
 
             <div class="carre2">
@@ -111,9 +111,9 @@
                     Maquette réalisée en HTML et CSS<br>le but était de créer une vitrine<br>E-commerce de
                     notre choix<br>sans framework
                 </p>
-                <a href="https://abasdass.github.io/E-liquideShop/" target="_blank">
+                <!-- <a href="https://abasdass.github.io/E-liquideShop/" target="_blank"> -->
                     <img class="projet2" src="assets/images/eliquide capture.png" alt="Image de projet">
-                </a>
+                <!-- </a> -->
             </div>
         </div>
 
