--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                 <img class="LLK" src="assets/images/icons8-linkedin-entouré-48.png" alt="icon linkedin">
             </a>
         </div>
-        <div class="github">
+        <!-- <div class="github">
             <a href="https://github.com/AbasDass" target="_blank">
                 <img class="LG" src="assets/images/icons8-github-48 (1).png" alt="icon github">
             </a>
-        </div>
+        </div> -->
     </header>
 
     <section class="presentation">
