--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                 <img class="LLK" src="assets/images/icons8-linkedin-entouré-48.png" alt="icon linkedin">
             </a>
         </div>
-        <!-- <div class="github">
+        <div class="github">
             <a href="https://github.com/AbasDass" target="_blank">
                 <img class="LG" src="assets/images/icons8-github-48 (1).png" alt="icon github">
             </a>
-        </div> -->
+        </div>
     </header>
 
     <section class="presentation">
@@ -98,7 +98,7 @@
         <div class="cardProject">
             <div class="carre1">
                 <p class="textP">
-                    En réalisant cette maquette<br>j'ai appris à utiliser le framework<br>bootstrap en m'aidant de la documentation
+                    En réalisant cette interface<br>j'ai appris à utiliser le framework<br>bootstrap en m'aidant de la documentation
                     <br>du framework
                 </p>
                 <!-- <a href="https://abasdass.github.io/Projet-All-show-La-Manu/index.html" target="_blank"> -->
@@ -108,7 +108,7 @@
 
             <div class="carre2">
                 <p class="textP2">
-                    Maquette réalisée en HTML et CSS<br>le but était de créer une vitrine<br>E-commerce de
+                    interface réalisée en HTML&CSS<br>le but était de créer une vitrine<br>E-commerce de
                     notre choix<br>sans framework
                 </p>
                 <!-- <a href="https://abasdass.github.io/E-liquideShop/" target="_blank"> -->
