--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <header class="allLogo">
         <div class="curriculum">
-            <a href="assets/images/CVAbas_Konate.pdf" target="_blank">
+            <a href="assets/images/CV_2023.pdf" target="_blank">
                 <img class="LCV" src="assets/images/icons8-cv-48.png" alt="direction vers le cv sur la même page">
             </a>
         </div>
@@ -172,7 +172,7 @@
                         <li>CSS</li>
                         <li>BOOTSTRAP</li>
                         <li>JAVASCRIPT</li>
-                        <li>PHP</li>
+                        <li>PHP(TDD)</li>
                         <li>FIGMA</li>
                         <li>PHOTOSHOP</li>
                         <li>PREMIERE PRO</li>
@@ -186,9 +186,12 @@
                 EXPÉRIENCES PROFESSIONNELLES
             </h2>
             <p class="textEp">
+                Stagiaire - développement web De mai 2022 à juin 2022<br>
+                INSY2S - Lille<br>
+                <br>
                 Assistant d'éducation De 2020 à 2021<br>
                 Collège François Villon Cambrai, France<br>
-                - Chargé de la bonne pédagogie des élèves<br>
+                Chargé de la bonne pédagogie des élèves<br>
                 <br>
                 Intervenant Sportive De 2019 à 2020<br>
                 Ecoles de la commune<br>Margny-Lès-Compiègne<br>
@@ -202,7 +205,6 @@
                 <br>
                 Commis Art Culinaire De 2016 à 2017<br>
                 Patrimoine et terroir Compiègne<br>
-                Mise en place du service de restauration<br>
             </p>
         </div>
     </section>
@@ -224,7 +226,7 @@
                 <p>Merise</p>
                 <p>MySQL</p>
                 <p>SQL</p>
-                <p>PHP</p>
+                <p>PHP(TDD)</p>
                 <p>SYMFONY</p>
             </div>
         </div>
