--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <header class="allLogo">
         <div class="curriculum">
-            <a href="assets/images/CV_2023.pdf" target="_blank">
+            <a href="assets/images/CV FullStack KONATE Abas.pdf" target="_blank">
                 <img class="LCV" src="assets/images/icons8-cv-48.png" alt="direction vers le cv sur la même page">
             </a>
         </div>
